2008-07-04  Neil Roberts  <neil@o-hand.com>

	* examples/test-shader.rb: Added the edge-detect filter from
	test-shader.c

2008-07-04  Neil Roberts  <neil@o-hand.com>

	* examples/test-shader.rb: Use sampler2D instead of sampler2DRect
	now that Clutter has removed support for the ARB_texture_rectangle
	extension.

2008-06-03  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltstagemanager.h: 
	* clutter/rbcltstagemanager.c: Added a wrapper for
	ClutterStageManager. A global variable is used to keep track of
	the default stage manager so that all of the stages can be marked

	* clutter/rbcltmain.c (rbclt_init): Added a call to
	rbclt_stage_manager_init.

	* clutter/extconf.rb: Added rbcltstagemanager.o

	* clutter/rbclutter.c (Init_clutter): Added a call to
	rbclt_stage_manager_init.

2008-05-26  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltgroup.c: Removed deprecated methods.

2008-05-26  Neil Roberts  <neil@o-hand.com>

	* clutter/rbclutter.c (Init_clutter): Added calls to
	rbclt_callback_func_init and rbclt_frame_source_init.

	* clutter/rbcltframesource.c: Added a binding for
	clutter_frame_source_add.

	* clutter/extconf.rb: Added rbcltcallbackfunc.o and
	rbcltframesource.o

	* clutter/rbcltalphafunc.c: 
	* clutter/rbcltcallbackfunc.h: 
	* clutter/rbcltcallbackfunc.c: Moved the callback wrapper code
	from rbcltalphafunc.c to a separate file so that it can be used by
	the frame source as well.

2008-05-26  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltevent.c.in: 
	* clutter/mkrbcltevent.rb: The root 'Event' class is now created
	in mkrbcltevent.rb because it now has a lot of fields so the
	getters and setters are created automatically. The common fields
	from the other classes (such as 'time') have been removed. All
	classes have been updated to version 0.7

2008-05-24  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltentry.c (rbclt_entry_handle_key_event): Removed as
	the method is now deprecated.